cmake_minimum_required(VERSION 3.23)
project(CW1)

set(CMAKE_CXX_STANDARD 14)

add_executable(CW1
        coursework-1/main.cpp coursework-1/CodeFunctions.h coursework-1/vehicles.h coursework-1/codeFunctions.cpp coursework-1 coursework-1/motorcycle.cpp coursework-1/motorcycle.h coursework-1/car.cpp coursework-1/car.h coursework-1/van.cpp coursework-1/van.h coursework-1/vehicles.cpp)
